--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- logo -->
                 <div class="w-[12rem] max-w-full">
                     <a href="#">
-                        <img src="/assets/Tailwind CSS Website/images/logo.png" alt="logo" class="w-full">
+                        <img src="assets/Tailwind CSS Website/images/logo.png" alt="logo" class="w-full">
                     </a>
                 </div>
 
@@ -97,13 +97,13 @@
 
                     <!-- brand -->
                     <div class="mt-6 flex flex-wrap gap-4">
-                        <img src="/assets/Tailwind CSS Website/images/brand/brand (1).png" alt="brand" class="w-32 cursor-pointer rounded-lg border border-blue-300/20 bg-white px-5 py-3 shadow-md shadow-blue-500/5 
+                        <img src="assets/Tailwind CSS Website/images/brand/brand (1).png" alt="brand" class="w-32 cursor-pointer rounded-lg border border-blue-300/20 bg-white px-5 py-3 shadow-md shadow-blue-500/5 
                             duration-200 hover:scale-95 sm:w-36">
-                        <img src="/assets/Tailwind CSS Website/images/brand/brand (2).png" alt="brand" class="w-32 cursor-pointer rounded-lg border border-blue-300/20 bg-white px-5 py-3 shadow-md shadow-blue-500/5 
+                        <img src="assets/Tailwind CSS Website/images/brand/brand (2).png" alt="brand" class="w-32 cursor-pointer rounded-lg border border-blue-300/20 bg-white px-5 py-3 shadow-md shadow-blue-500/5 
                             duration-200 hover:scale-95 sm:w-36">
-                        <img src="/assets/Tailwind CSS Website/images/brand/brand (3).png" alt="brand" class="w-32 cursor-pointer rounded-lg border border-blue-300/20 bg-white px-5 py-3 shadow-md shadow-blue-500/5 
+                        <img src="assets/Tailwind CSS Website/images/brand/brand (3).png" alt="brand" class="w-32 cursor-pointer rounded-lg border border-blue-300/20 bg-white px-5 py-3 shadow-md shadow-blue-500/5 
                             duration-200 hover:scale-95 sm:w-36">
-                        <img src="/assets/Tailwind CSS Website/images/brand/brand (4).png" alt="brand" class="w-32 cursor-pointer rounded-lg border border-blue-300/20 bg-white px-5 py-3 shadow-md shadow-blue-500/5 
+                        <img src="assets/Tailwind CSS Website/images/brand/brand (4).png" alt="brand" class="w-32 cursor-pointer rounded-lg border border-blue-300/20 bg-white px-5 py-3 shadow-md shadow-blue-500/5 
                             duration-200 hover:scale-95 sm:w-36">
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="w-full px-4 lg:w-6/12">
                     <div class="lg:ml-auto lg:text-right">
                         <div class="relative z-10 inline-block pt-11 lg:pt-0">
-                            <img src="/assets/Tailwind CSS Website/images/hero.png" alt="hero section img"
+                            <img src="assets/Tailwind CSS Website/images/hero.png" alt="hero section img"
                                 class="max-w-full lg:ml-auto">
                         </div>
                     </div>
@@ -135,7 +135,7 @@
             <!-- features img -->
             <div class="md:flex md:justify-between md:gap-6 xl:gap-10">
                 <div class="mb-5 max-h-[600px] overflow-hidden rounded-lg md:mb-0 md:w-5/12">
-                    <img src="/assets/Tailwind CSS Website/images/features/features.png" alt="features img" class="h-full scale-125 sm:w-full
+                    <img src="assets/Tailwind CSS Website/images/features/features.png" alt="features img" class="h-full scale-125 sm:w-full
                     sm:object-cover">
                 </div>
                 <div class="md:w-7/12">
@@ -158,19 +158,19 @@
                     <!-- features icon -->
                     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
                         <div class="flex flex-col items-center justify-center rounded-xl bg-white px-4 py-8 shadow-lg">
-                            <img class="mb-3 w-16" src="/assets/Tailwind CSS Website/images/features/icon (1).png"
+                            <img class="mb-3 w-16" src="assets/Tailwind CSS Website/images/features/icon (1).png"
                                 alt="">
                             <h3 class="text-lg font-bold text-slate-600">Web Design</h3>
                             <a href="#" class="text-sm text-blue-500">Learn more</a>
                         </div>
                         <div class="flex flex-col items-center justify-center rounded-xl bg-white px-4 py-8 shadow-lg">
-                            <img class="mb-3 w-16" src="/assets/Tailwind CSS Website/images/features/icon (2).png"
+                            <img class="mb-3 w-16" src="assets/Tailwind CSS Website/images/features/icon (2).png"
                                 alt="">
                             <h3 class="text-lg font-bold text-slate-600">Automation</h3>
                             <a href="#" class="text-sm text-blue-500">Learn more</a>
                         </div>
                         <div class="flex flex-col items-center justify-center rounded-xl bg-white px-4 py-8 shadow-lg">
-                            <img class="mb-3 w-16" src="/assets/Tailwind CSS Website/images/features/icon (3).png"
+                            <img class="mb-3 w-16" src="assets/Tailwind CSS Website/images/features/icon (3).png"
                                 alt="">
                             <h3 class="text-lg font-bold text-slate-600">Infographics</h3>
                             <a href="#" class="text-sm text-blue-500">Learn more</a>
@@ -229,7 +229,7 @@
 
                 <!-- about img -->
                 <div class="mt-8 flex justify-center md:mt-0 md:w-5/12">
-                    <img src="/assets/Tailwind CSS Website/images/about.png" alt="about img"
+                    <img src="assets/Tailwind CSS Website/images/about.png" alt="about img"
                         class="mx-h-[500px] md:max-h-max">
                 </div>
             </div>
@@ -325,7 +325,7 @@
                 <!-- wrapper -->
                 <div class="md:flex md:justify-between md:gap-6">
                     <div class="mb-8 flex justify-center md:mb-0 md:w-5/12">
-                        <img src="/assets/Tailwind CSS Website/images/faq.png" alt="faq img"
+                        <img src="assets/Tailwind CSS Website/images/faq.png" alt="faq img"
                             class="max-h-[500px] md:max-h-max">
                     </div>
 
@@ -442,7 +442,7 @@
                 <!-- col-1 -->
                 <div class="grid gap-5 sm:grid-cols-2 md:grid-cols-4">
                     <div class="group relative h-40 overflow-hidden rounded-lg lg:h-52">
-                        <img src="/assets/Tailwind CSS Website/images/portfolio/p-1.png" alt="portfolio img" class="absolute h-full w-full
+                        <img src="assets/Tailwind CSS Website/images/portfolio/p-1.png" alt="portfolio img" class="absolute h-full w-full
                         object-cover duration-200 group-hover:scale-125">
                         <div class="absolute -bottom-60 flex w-full cursor-pointer items-center justify-between bg-gradient-to-t from-slate-800
                         px-3 pb-4 pt-10 duration-200 group-hover:-bottom-0">
@@ -452,7 +452,7 @@
                         </div>
                     </div>
                     <div class="group relative h-40 overflow-hidden rounded-lg lg:h-52">
-                        <img src="/assets/Tailwind CSS Website/images/portfolio/p-2.png" alt="portfolio img" class="absolute h-full w-full
+                        <img src="assets/Tailwind CSS Website/images/portfolio/p-2.png" alt="portfolio img" class="absolute h-full w-full
                         object-cover duration-200 group-hover:scale-125">
                         <div class="absolute -bottom-60 flex w-full cursor-pointer items-center justify-between bg-gradient-to-t from-slate-800
                         px-3 pb-4 pt-10 duration-200 group-hover:-bottom-0">
@@ -462,7 +462,7 @@
                         </div>
                     </div>
                     <div class="group relative h-40 overflow-hidden rounded-lg lg:h-52 sm:col-span-2">
-                        <img src="/assets/Tailwind CSS Website/images/portfolio/p-3.png" alt="portfolio img" class="absolute h-full w-full
+                        <img src="assets/Tailwind CSS Website/images/portfolio/p-3.png" alt="portfolio img" class="absolute h-full w-full
                         object-cover duration-200 group-hover:scale-125">
                         <div class="absolute -bottom-60 flex w-full cursor-pointer items-center justify-between bg-gradient-to-t from-slate-800
                         px-3 pb-4 pt-10 duration-200 group-hover:-bottom-0">
@@ -478,7 +478,7 @@
                 <!-- col-2 -->
                 <div class="grid gap-5 sm:grid-cols-2 md:grid-cols-3 ">
                     <div class="group relative h-40 overflow-hidden rounded-lg lg:h-52 md:col-span-2">
-                        <img src="/assets/Tailwind CSS Website/images/portfolio/p-4.png" alt="portfolio img" class="absolute h-full w-full
+                        <img src="assets/Tailwind CSS Website/images/portfolio/p-4.png" alt="portfolio img" class="absolute h-full w-full
                         object-cover duration-200 group-hover:scale-125">
                         <div class="absolute -bottom-60 flex w-full cursor-pointer items-center justify-between bg-gradient-to-t from-slate-800
                         px-3 pb-4 pt-10 duration-200 group-hover:-bottom-0">
@@ -488,7 +488,7 @@
                         </div>
                     </div>
                     <div class="group relative h-40 overflow-hidden rounded-lg lg:h-52">
-                        <img src="/assets/Tailwind CSS Website/images/portfolio/p-5.png" alt="portfolio img" class="absolute h-full w-full
+                        <img src="assets/Tailwind CSS Website/images/portfolio/p-5.png" alt="portfolio img" class="absolute h-full w-full
                         object-cover duration-200 group-hover:scale-125">
                         <div class="absolute -bottom-60 flex w-full cursor-pointer items-center justify-between bg-gradient-to-t from-slate-800
                         px-3 pb-4 pt-10 duration-200 group-hover:-bottom-0">
@@ -503,7 +503,7 @@
                 <!-- col-3 -->
                 <div class="grid gap-5 sm:grid-cols-2 md:grid-cols-4">
                     <div class="group relative h-40 overflow-hidden rounded-lg lg:h-52">
-                        <img src="/assets/Tailwind CSS Website/images/portfolio/p-6.png" alt="portfolio img" class="absolute h-full w-full
+                        <img src="assets/Tailwind CSS Website/images/portfolio/p-6.png" alt="portfolio img" class="absolute h-full w-full
                         object-cover duration-200 group-hover:scale-125">
                         <div class="absolute -bottom-60 flex w-full cursor-pointer items-center justify-between bg-gradient-to-t from-slate-800
                         px-3 pb-4 pt-10 duration-200 group-hover:-bottom-0">
@@ -513,7 +513,7 @@
                         </div>
                     </div>
                     <div class="group relative h-40 overflow-hidden rounded-lg lg:h-52">
-                        <img src="/assets/Tailwind CSS Website/images/portfolio/p-7.png" alt="portfolio img" class="absolute h-full w-full
+                        <img src="assets/Tailwind CSS Website/images/portfolio/p-7.png" alt="portfolio img" class="absolute h-full w-full
                         object-cover duration-200 group-hover:scale-125">
                         <div class="absolute -bottom-60 flex w-full cursor-pointer items-center justify-between bg-gradient-to-t from-slate-800
                         px-3 pb-4 pt-10 duration-200 group-hover:-bottom-0">
@@ -523,7 +523,7 @@
                         </div>
                     </div>
                     <div class="group relative h-40 overflow-hidden rounded-lg lg:h-52 sm:col-span-2">
-                        <img src="/assets/Tailwind CSS Website/images/portfolio/p-8.png" alt="portfolio img" class="absolute h-full w-full
+                        <img src="assets/Tailwind CSS Website/images/portfolio/p-8.png" alt="portfolio img" class="absolute h-full w-full
                         object-cover duration-200 group-hover:scale-125">
                         <div class="absolute -bottom-60 flex w-full cursor-pointer items-center justify-between bg-gradient-to-t from-slate-800
                         px-3 pb-4 pt-10 duration-200 group-hover:-bottom-0">
@@ -554,7 +554,7 @@
                 <!-- single-blog -->
                 <div class="w-full duration-200 hover:scale-95">
                     <div class="max-h-52 w-full overflow-hidden rounded-t-xl ">
-                        <img src="/assets/Tailwind CSS Website/images/blog/blog-1.png" alt="blom img" class="w-full">
+                        <img src="assets/Tailwind CSS Website/images/blog/blog-1.png" alt="blom img" class="w-full">
                     </div>
                     <div class="rounded-b-lxl px-5 pb-5 pt-3 shadow-md shadow-blue-500/10 ">
                         <div class="">
@@ -565,7 +565,7 @@
                         </div>
                         <hr class="my-4 border-slate-100">
                         <div class="flex">
-                            <img src="/assets/Tailwind CSS Website/images/blog/user-1.png" alt="user img"
+                            <img src="assets/Tailwind CSS Website/images/blog/user-1.png" alt="user img"
                                 class="mr-3 h-10 w-10 rounded-full object-cover">
                             <p class="text-sm font-semibold capitalize text-slate-600">Zahidul Hossain <span
                                     class="block text-xs text-slate-400">Web Designer</span></p>
@@ -575,7 +575,7 @@
                 <!-- single-blog -->
                 <div class="w-full duration-200 hover:scale-95">
                     <div class="max-h-52 w-full overflow-hidden rounded-t-xl ">
-                        <img src="/assets/Tailwind CSS Website/images/blog/blog-2.png" alt="blom img" class="w-full">
+                        <img src="assets/Tailwind CSS Website/images/blog/blog-2.png" alt="blom img" class="w-full">
                     </div>
                     <div class="rounded-b-lxl px-5 pb-5 pt-3 shadow-md shadow-blue-500/10 ">
                         <div class="">
@@ -587,7 +587,7 @@
                         </div>
                         <hr class="my-4 border-slate-100">
                         <div class="flex">
-                            <img src="/assets/Tailwind CSS Website/images/blog/user-2.png" alt="user img"
+                            <img src="assets/Tailwind CSS Website/images/blog/user-2.png" alt="user img"
                                 class="mr-3 h-10 w-10 rounded-full object-cover">
                             <p class="text-sm font-semibold capitalize text-slate-600">Teuku Alif <span
                                     class="block text-xs text-slate-400">Web Designer</span></p>
@@ -597,7 +597,7 @@
                 <!-- single-blog -->
                 <div class="w-full duration-200 hover:scale-95">
                     <div class="max-h-52 w-full overflow-hidden rounded-t-xl ">
-                        <img src="/assets/Tailwind CSS Website/images/blog/blog-3.png" alt="blom img" class="w-full">
+                        <img src="assets/Tailwind CSS Website/images/blog/blog-3.png" alt="blom img" class="w-full">
                     </div>
                     <div class="rounded-b-lxl px-5 pb-5 pt-3 shadow-md shadow-blue-500/10 ">
                         <div class="">
@@ -608,7 +608,7 @@
                         </div>
                         <hr class="my-4 border-slate-100">
                         <div class="flex">
-                            <img src="/assets/Tailwind CSS Website/images/blog/user-3.png" alt="user img"
+                            <img src="assets/Tailwind CSS Website/images/blog/user-3.png" alt="user img"
                                 class="mr-3 h-10 w-10 rounded-full object-cover">
                             <p class="text-sm font-semibold capitalize text-slate-600">Zahidul Hossain <span
                                     class="block text-xs text-slate-400">Web Designer</span></p>
@@ -715,7 +715,7 @@
             <!-- footer top -->
             <div class="grid gap-16 row-gap-10 mb-8 lg:grid-cols-6">
                 <div class="md:max-w-md lg:col-span-2">
-                    <img src="/assets/Tailwind CSS Website/images/logo.png" alt="footer img" class="w-3/6">
+                    <img src="assets/Tailwind CSS Website/images/logo.png" alt="footer img" class="w-3/6">
                     <div class="mt-4 lg:max-w-sm">
                         <p class="text-sm text-slate-500">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                             accusantium doloremque
