fixing contact effect.png

--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 
     <!-- contact start -->
     <section class="relative overflow-hidden py-16" id="Contact">
-        <img src="/assets/Tailwind CSS Website/images/effect.png" alt="effect" class="absolute bottom-[-400px] -z-10 w-full
+        <img src="assets/Tailwind CSS Website/images/effect.png" alt="effect" class="absolute bottom-[-400px] -z-10 w-full
         opacity-[0.2]">
         <div class="mx-auto max-w-7xl px-8 md:px-6">
             <div class="-mx-4 flex flex-wrap lg:justify-between">
